assets/css/rtl-basic-mobile.css
/* ... */
@media only screen and (max-width: 779px){
    #audit-trail-wrapper .header .document-info .logo{
        float:none !important;
    }

    #audit-trail-wrapper .main .info .user, #audit-trail-wrapper .main .info .bio, #audit-trail-wrapper .main .info .sign {
        float: none !important;
        
    }


}


@media only screen and (max-width: 779px){
    #audit-trail-wrapper .header .document-info .logo{
        float:none !important;
    }

    #audit-trail-wrapper .main .info .user, #audit-trail-wrapper .main .info .bio, #audit-trail-wrapper .main .info .sign {
        float: none !important;
        
    }

}
.checkbox input[type=checkbox], .checkbox input[type=radio] {
    position: absolute;
    margin-top: 7px;
    margin-right: -20px;
}
.checkbox-inline input[type=checkbox], .radio-inline input[type=radio] {
    margin-left: 8px;
    margin-top: 5px;
}
.checkbox-inline, .radio-inline {
     padding-left: 5px; 
}

@media only screen and (max-width: 780px){
table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
    padding-left: 3% !important;
    padding-right: 25% !important;
}
table.responsive-table td span, table.responsive-table td span {
    position: relative !important;
   
}
}

table.display td.time {
     width: auto; 
}

.time span,.log span{
    float:right;

}


@media only screen and (max-width: 479px){
#audit-trail-wrapper .main .history table tbody tr td:first-child, #audit-trail-wrapper .main .history table tbody th:first-child {
     padding-left: 3% !important; 
    
}
}
.sig-type{
    right: 45px;
}



@media (orientation: landscape) {
    .signature-wrapper-displayonly .sign-here{
        width: unset !important;
    }

  }
  .modal.fade.esig-terms-modal-lg {
  background-color: rgb(0 0 0 / 50%);
  }
  @media only screen and (min-width: 768px){
  .rtl-sign-contracts{
    flex: 0.4 !important;
   
    }
  } 

.document-sign-page #audit-trail-wrapper .main .info .sign {
    border: none;
}

#audit-trail-wrapper .main .row {
    margin-bottom: 30px !important;
}

.dfc-image img {
    vertical-align: bottom !important;    
}

.dfc-image{
    height: 30px !important;   
}

.row>*{
padding-right: 0px !important; 
padding-left: 0px !important; 
}

#audit-trail-wrapper .page-url-qr .wrapper{
    width: 111px;
}

#audit-trail-wrapper img{
    vertical-align: middle !important;
}

table.responsive-table td:nth-child(1):before, table.responsive-table td:nth-child(2):before{
   left:unset !important;
}

.sig-middle .sig-draw-section{
    width: 95% !important;
}

#esig-mobile-sig-close{
    margin-right: 5%;
}
.signature-wrapper .clearButton{
    top: -30% !important;
}

